--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Farfetch</h1>
         <div id="app_container"></div>
 
-        <script src="/react-views/build/index.js"></script>
+        <script src="/build/index.js"></script>
 
         <footer class="footer">
             <p>&copy; Farfetch 2017</p>
