--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,8 +10,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
         crossorigin="anonymous">
     <style type="text/css">
-        input[type="checkbox"] {
-            transform: scale(2, 2);
+        hr {
+            border-top: 1px solid #cde !important;
         }
     </style>
 </head>
@@ -19,7 +19,7 @@
 <body>
 
     <div class="container">
-        <h1>Farfetch</h1>
+        <h1>Farfetch - Sharing Friday!</h1>
         <div id="app_container"></div>
 
         <script src="/build/index.js"></script>
