--- a/server/public/index.html
+++ b/server/public/index.html
@@ -48,6 +48,12 @@
             background-position-x: center;
             background-image: url(./_theme/img/separator.png);
         }
+        .ts-qr-code
+        {
+            text-align: center;
+            background-position-x: center;
+            margin-top: -100px; 
+        }
 
     </style>
     <link rel="apple-touch-icon" sizes="57x57" href="/_theme/img/icon/apple-icon-57x57.png">
@@ -74,6 +80,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
+                <div class="ts-qr-code" >
+                    <img src="./_theme/img/qr_code.jpg" width="200" />
+                </div>
                 <h2 style="font-size: 48px;"><big><strong>Type</strong>Script</big></h2>
                 <h3>Javascript that Scales</h3>
                 <hr>
